package org.example.classes;

public enum ResearcherType {
    EXPEDITIONIST,
    FOLK_RESEARCHER,
}
