package org.example.classes;
public enum Stat{
    HP,
    INTELLIGENCE,
    LUCK,
    DAMAGE,
    SANITY,
}

