package org.example.interfaces;

public interface Breakable {
    void breakSelf();
}
