@startuml

interface Breakable{
    + void breakSelf()
}
interface Resembleable{
    + void resemble(String what)
}
interface Excavatable{
    + void getExcavated()
}

Stat -- Human
ResearcherType -- Human
class Human{
     # String name
     # ResearcherType type
     # double[] mas;
     + read(String what)
     + talk(String what)
     + write(String what)
     + Human()
     + String getName()
     + setStat()
     + getStat()
     + setNewStat()

}

Period -- GeologicalFormation
abstract class GeologicalFormation{
    # String  durability
    # Period period
    + String getDurability()
    + GeologicalFormation(String durability)
}
abstract class Animal{
    # bool isAlive
    + bool getIsAlive()
    + Animal(bool isAlive)
}

enum Stat{
    HP
    INTELLIGENCE
    LUCK
    DAMAGE
    SANITY
}
enum Period{
    CRETATIOUS ("Меловой")
    EOCENOS ("Эоцен")
    JURASSIC ("Юрский")
    MIOCENOS ("Миоцен")
    UNSPECIFIED ("Неизвестный")
}
enum ResearcherType{
    EXPEDITIONIST
    FOLK_RESEARCHER
}

class Item{
}
class Book extends Item{
}
class NecronExtract extends Book{
}
class Fossil extends Item{
}
class Creature extends Animal implements Resembleable{
    # isAlive = False
    + void resemble(String what)
    + Creature()
}
class GeologicalLayer extends GeologicalFormation implements Excavatable{
    # String agePeriod
    # Period period
    #durability = "Durable"
    + void getExcavated()
    + String getAgePeriod()
    + GeologicalLayer()
}
class Stalagmite extends GeologicalFormation implements Breakable{
    # durability = "Very durable"
    + hang()
    + void breakSelf()
    + Stalagmite()
}
class LimeStone extends GeologicalFormation{
    # durability = "Durable"
    + keepIntact()
    + LimeStone()
}
@enduml